# MLOps_24s

./: .gitignore  .pre-commit-config.yaml  Dockerfile.txt  README.md  config.py  infer.py  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml
tools/: data.py  infer.py  main.py  model.py  train.py
