[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "image classification mlops project"
authors = ["telyakovskaya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
torch = "^2.3.1"
torchvision = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
